cmake_minimum_required(VERSION 3.29)
project(leetcode)

set(CMAKE_CXX_STANDARD 23)

add_executable(leetcode main.cpp)

add_executable(3200.MaxHeightOfTriangle 3200.MaxHeightOfTriangle.cpp)
add_executable(3158.DuplicateNumbersXOR 3158.DuplicateNumbersXOR.cpp)
add_executable(910.SmallestRangeII 910.SmallestRangeII.cpp)
add_executable(3185.CountCompleteDayPairs 3185.CountCompleteDayPairs.cpp)